--- a/tree/templates/forest/tree/tree_detail.html
+++ b/tree/templates/forest/tree/tree_detail.html
@@ -10,4 +10,5 @@
     {% empty %}
         <p>Branches not found!</p>
     {% endfor %}
+    <a href="{{ tree.get_unique_id }}edit/">Add some</a>
 {% endblock %}
